[package]
name = "halver"
version = "0.1.0"
authors = ["wareya <wareya@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
image = "0.23.12"
ordered-float = "2.0"

[profile.release]
lto = false
codegen-units = 1